# spdm-utils

./: .gitignore  .gitmodules  COPYRIGHT  Cargo.toml  NOTICES  README.md  build.rs  flake.nix  wrapper.h
.cargo/: config.toml
.github/workflows/: ci.yml
certs/: generate_certs.sh  openssl-alias.cnf  openssl.cnf  setup_certs.sh
certs/alias/: openssl.cnf
certs/alias/slot0/: device.der  device.key  device.key.der  device.req  immutable.der
certs/bank-ecc384/: generate_certs.sh  openssl.cnf  setup_certs.sh
certs/bank-ecc384/alias/slot0/: device.cert.der  device.der  device.key  end_responder.req  immutable.der
certs/bank-ecc384/device/slot0/: end_requester.cert.der  end_responder.cert  end_responder.cert.der  end_responder.key
certs/bank-ecc384/slot0/: ca.cert  ca.cert.der  ca.der  ca.pub  inter.key  inter.key.der
certs/bank-mldsa87/: generate_certs.sh  setup_certs.sh
certs/bank-mldsa87/alias/: openssl.cnf
certs/bank-mldsa87/alias/slot0/: device.cert.der  device.der  device.key  device.key.der  device.req  immutable.der
certs/bank-mldsa87/device/slot0/: bundle_requester.certchain.der  bundle_responder.certchain.der  device.key  end_requester.cert  end_requester.cert.der  end_responder.cert  end_responder.cert.der
certs/bank-mldsa87/slot0/: ca.cert  ca.cert.der  ca.key  end_requester.key  end_requester.req  end_responder.req  inter.cert  inter.cert.der  inter.der  inter.key  inter.key.der  inter.req
certs/device/: openssl.cnf
certs/device/slot0/: bundle_requester.certchain.der  bundle_responder.certchain.der  device.cert.der  end_requester.cert  end_requester.cert.der  end_requester.key  end_requester.req  end_responder.cert
certs/slot0/: ca.cert  ca.cert.der  ca.key  device.cert.der  device.der  device.key  device.key.der  device.req  immutable.der  inter.cert  inter.cert.der  inter.der  inter.key  inter.key.der  inter.req
manifest/: encode_cbor.py  manifest.in.cbor  manifest.out.cbor
scripts/scsi/: create-disk-spdm.sh  teardown-disk.sh
src/: cli_helpers.rs  doe_pci_cfg.rs  io_buffers.rs  lib.rs  libspdm.rs  main.rs  nvme.rs  qemu_server.rs  request.rs  responder.rs  scsi.rs  socket_client.rs  socket_server.rs  storage_standards.rs  tcg_concise_evidence_binding.rs  tcp_client.rs  tcp_server.rs  test_suite.rs  usb_i2c.rs
src/libspdm/: lib.rs  libspdm_rs.rs  manifest.rs  responder.rs  spdm.rs
tock-responder/: Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml
tock-responder/.cargo/: config
tock-responder/runner/src/: elf2tab.rs
tock-responder/src/: libc_stubs.rs  main.rs  mctp.rs
