[package]
name = "SPDM-Utils"
repository = "https://github.com/westerndigitalcorporation/SPDM-Utils"
description = "SPDM-Utils is a Linux application designed to support, test and develop SPDM requesters and responders."
version = "1.0.0"
authors = ["Alistair Francis <alistair.francis@wdc.com>", "Wilfred Mallawa <wilfred.mallawa@wdc.com"]
edition = "2021"
readme = "README.md"

[features]
no_std = []

[lib]
name = "libspdm"
path = "src/libspdm/lib.rs"

[[bin]]
name = "spdm_utils"
path = "src/main.rs"

[build-dependencies]
bindgen = "0.63"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
memmap2 = "0.5"
once_cell = "1.16"
sha2 = "0.10"
log = "0.4.20"
env_logger = "0.7.0"
