[package]
name = "SPDM-Utils"
repository = "https://github.com/westerndigitalcorporation/SPDM-Utils"
description = "SPDM-Utils is a Linux application designed to support, test and develop SPDM requesters and responders."
version = "1.0.0"
authors = ["Alistair Francis <alistair.francis@wdc.com>", "Wilfred Mallawa <wilfred.mallawa@wdc.com"]
edition = "2021"
readme = "README.md"

[features]
default = ["std"]

no_std = []
std = ["clap", "memmap2", "once_cell", "sha2", "env_logger", "serialport", "lazy_static"]

[lib]
name = "libspdm"
path = "src/libspdm/lib.rs"

[[bin]]
name = "spdm_utils"
path = "src/main.rs"

[build-dependencies]
bindgen = "0.63"

[dependencies]
log = "0.4"
serialport = { version = "4.3.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }

clap = { version = "4.0", features = ["derive"], optional = true }
memmap2 = { version = "0.5", optional = true}
once_cell = { version = "1.16", optional = true}
sha2 = { version = "0.10", optional = true}
env_logger = { version = "0.10", optional = true}
