[package]
name = "SPDM-Utils"
repository = "https://github.com/westerndigitalcorporation/SPDM-Utils"
description = "SPDM-Utils is a Linux application designed to support, test and develop SPDM requesters and responders."
version = "1.0.0"
authors = ["Alistair Francis <alistair.francis@wdc.com>", "Wilfred Mallawa <wilfred.mallawa@wdc.com"]
edition = "2021"
readme = "README.md"

[features]
default = ["std"]

no_std = []
std = ["clap", "memmap2", "once_cell", "sha2", "env_logger", "serialport", "lazy_static", "colored", "which", "asn1-rs", "x509-parser", "minicbor", "minicbor-derive"]

[lib]
name = "libspdm"
path = "src/libspdm/lib.rs"

[[bin]]
name = "spdm_utils"
path = "src/main.rs"

[build-dependencies]
bindgen = "0.63"
which = "6.0.0"

[dependencies]
log = "0.4"
serialport = { version = "4.3.0", optional = true }
lazy_static = { version = "1.4.0", optional = true }

clap = { version = "4.0", features = ["derive"], optional = true }
memmap2 = { version = "0.5", optional = true}
once_cell = { version = "1.16", optional = true}
sha2 = { version = "0.10", optional = true}
env_logger = { version = "0.10", optional = true}
colored =  { version = "2.1", optional = true }
which =  { version = "6.0", optional = true }
asn1-rs = { version = "0.6", optional = true }
x509-parser = { version = "0.15", optional = true }
minicbor = { git = "https://gitlab.com/twittner/minicbor.git", features = ["half", "alloc", "std"], optional = true }
minicbor-derive = { git = "https://gitlab.com/twittner/minicbor.git", features = ["alloc", "std"], optional = true }

libmctp = { git = "https://github.com/westerndigitalcorporation/libmctp.git" }
