[package]
authors = [
    "Alistair Francis <alistair.francis@wdc.com",
    "Wilfred Mallawa <wilfred.mallawa@wdc.com>"
    ]
categories = ["embedded", "no-std", "os"]
description = """Tock Rust responder implementation of SPDM-Utils"""
edition = "2021"
license = "Apache-2.0 OR MIT"
name = "spdm-tock-responder"
repository = "https://www.github.com/tock/SPDM-Utils"
version = "0.1.0"

[workspace.package]
# This must be kept in sync with rust-toolchain.toml; please see that file for
# more information.
rust-version = "1.70"

[dependencies]
# Pull in all of the libtock-rs crates
libtock = { path = "libtock-rs"}
libtock_adc = { path = "libtock-rs/apis/adc"}
libtock_air_quality = { path = "libtock-rs/apis/air_quality" }
libtock_alarm = { path = "libtock-rs/apis/alarm" }
libtock_ambient_light = { path = "libtock-rs/apis/ambient_light" }
libtock_buttons = { path = "libtock-rs/apis/buttons" }
libtock_buzzer = {path = "libtock-rs/apis/buzzer"}
libtock_console = { path = "libtock-rs/apis/console" }
libtock_debug_panic = { path = "libtock-rs/panic_handlers/debug_panic" }
libtock_gpio = { path = "libtock-rs/apis/gpio" }
libtock_leds = { path = "libtock-rs/apis/leds" }
libtock_low_level_debug = { path = "libtock-rs/apis/low_level_debug" }
libtock_ninedof = { path = "libtock-rs/apis/ninedof" }
libtock_platform = { path = "libtock-rs/platform" }
libtock_proximity = { path = "libtock-rs/apis/proximity" }
libtock_runtime = { path = "libtock-rs/runtime" }
libtock_sound_pressure = {path = "libtock-rs/apis/sound_pressure"}
libtock_temperature = { path = "libtock-rs/apis/temperature" }

# The top level SPDM utils crate
SPDM-Utils = { path = "../", default-features = false, features = ["no_std"] }

# The heap allocator and portable atomics
embedded-alloc = "0.5.1"
critical-section = { version = "1.0" }

once_cell = { version = "1.16", default-features = false, features = ["critical-section"] }

libmctp = { git = "https://github.com/westerndigitalcorporation/libmctp.git" }

[build-dependencies]
libtock_build_scripts = { path = "libtock-rs/build_scripts"}

[profile.dev]
debug = true
lto = true
panic = "abort"

[profile.release]
debug = true
lto = true
panic = "abort"

[workspace]
exclude = ["libtock-rs"]
members = ["libtock-rs/runner"]

[features]
# Enable debug printing of SPDM buffers, this will
# significantly affect throughput speed (printing overhead).
spdm_debug = []
